--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   dio: ^5.1.2
   json_annotation: ^4.8.1
+  provider: ^6.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
